--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
  
     
 <div class="banner-wrap vh-100 vw-100 text-white">
+  <div class="overlay"></div>
  <header class="px-5 p-3 text-white">
     <div>
-      <h3 class="float-md-start mb-0">Portfolio</h3>
+      <h3 class="float-md-start text-center">Portfolio</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         <a class="nav-link" href="#">Features</a>
@@ -51,7 +52,7 @@
   </header>
   <main class="d-flex flex-column align-items-center justify-content-center h-75 text-center">
     <h1 class="display-1">I am Kimberly Dhlodhlo</h1>
-    <p class="lead">I am a Fullstack Website Developer student at Zaio coding school</p>
+    <p class="lead">I am a Fullstack Web Developer student, at Zaio coding school</p>
   </main>
 </div>
 
