changed the links

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
               <div class="card-body">
                 <h5 class="card-title">Netflix Landing Page</h5>
                 <p class="card-text">Built this with HTML & CSS</p>
-                <a href="https://vc-netflix.netlify.app" target="_blank" class="btn btn-primary">View Website</a>
-                <a href="https://github.com/akhilboddu/vc-netflix" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
+                <a href="https://netflix-zaio-platforms.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
+                <a href="https://github.com/Kimberly2330/YouTube-clone" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
                 <h5 class="card-title">Netflix Landing Page</h5>
                 <p class="card-text">Built this with HTML & CSS</p>
                 <a href="https://vc-netflix.netlify.app" target="_blank" class="btn btn-primary">View Website</a>
-                <a href="https://github.com/akhilboddu/vc-netflix" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
+                <a href="https://github.com/Kimberly2330/Netflix-Clone-Zaio" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
               </div>
             </div>
           </div>
@@ -147,10 +147,10 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Netflix Landing Page</h5>
-                <p class="card-text">Built this with HTML & CSS</p>
-                <a href="https://vc-netflix.netlify.app" target="_blank" class="btn btn-primary">View Website</a>
-                <a href="https://github.com/akhilboddu/vc-netflix" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
+                <h5 class="card-title">YouTube</h5>
+                <p class="card-text">Building YouTube using HTML and CSS</p>
+                <a href="https://moonlit-melomakarona-187e33.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
+                <a href="https://github.com/Kimberly2330/YouTube-clone" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
               </div>
             </div>
           </div>          
