--- a/index.html
+++ b/index.html
@@ -82,10 +82,6 @@
                       <span class="badge rounded-pill bg-dark">firebase</span>
                       <span class="badge rounded-pill bg-dark">OOP</span>
                       <span class="badge rounded-pill bg-dark">ReactJS</span>
-                      <span class="badge rounded-pill bg-dark">Redux</span>
-                      <span class="badge rounded-pill bg-dark">NodeJS</span>
-                      <span class="badge rounded-pill bg-dark">MongoDB</span>
-                      <span class="badge rounded-pill bg-dark">Express</span>
                     </p>
                   </div>
                 </div>
@@ -93,7 +89,7 @@
               <div class="col-md-6 mt-3">
                 <h1 class="text-center text-md-start"><mark>About me</mark></h1>
                 <p class="lead">
-                  I am a Fullstack web develper beginner, i acquied my knowledge at Zaio coding School.
+                  I am a Fullstack web develper beginner, I acquied my knowledge at Zaio coding School.
                 </p>
               </div>
             </div>
@@ -175,7 +171,7 @@
                   >View Website</a
                 >
                 <a
-                  href="https://github.com/akhilboddu/vc-netflix"
+                  href="https://github.com/Kimberly2330/Netflix-Clone-Zaio"
                   target="_blank"
                   class="btn btn-outline-dark"
                   ><i class="bi bi-code-slash"></i
@@ -196,21 +192,16 @@
               Would love to connect with fellow developers, employers looking
               for developers, or anyone looking to get web development done.
             </p>
+           
             <a
               class="fs-2"
-              href="https://www.instagram.com/akhilboddu/"
-              target="_blank"
-              ><i class="bi bi-instagram m-2"></i
-            ></a>
-            <a
-              class="fs-2"
-              href="https://www.linkedin.com/in/akhilboddu/"
+              href="https://www.linkedin.com/in/kimberly-dhlodhlo-78703a250/"
               target="_blank"
               ><i class="bi bi-linkedin m-2"></i
             ></a>
             <a
               class="fs-2"
-              href="https://github.com/akhilboddu/"
+              href="https://github.com/Kimberly2330"
               target="_blank"
               ><i class="bi bi-github m-2"></i
             ></a>
